--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "sekai-virtual-live-discord-bot",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "repository": "git@github.com:elliot-gh/Sekai-Virtual-Live-Discord-Bot.git",
   "author": "Elliot",
   "license": "MIT",
   "private": true,
   "type": "module",
-  "packageManager": "yarn@3.3.0",
+  "packageManager": "yarn@3.5.1",
   "engines": {
-    "node": ">=18.12.0"
+    "node": ">=18.15.0"
   },
   "dependencies": {
     "agenda": "^5.0.0",
-    "axios": "^1.2.0",
-    "moment": "^2.29.4",
-    "mongoose": "^6.7.5"
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.7",
+    "fuse.js": "^6.6.2",
+    "mongoose": "^7.2.1"
   }
 }
