--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "sekai-virtual-live-discord-bot",
-  "version": "3.1.0",
+  "version": "5.0.0",
   "repository": "git@github.com:elliot-gh/Sekai-Virtual-Live-Discord-Bot.git",
   "author": "Elliot",
   "license": "MIT",
   "private": true,
   "type": "module",
-  "packageManager": "yarn@3.5.1",
+  "packageManager": "yarn@4.2.2",
   "engines": {
-    "node": ">=18.15.0"
+    "node": ">=20.14.0"
   },
   "dependencies": {
+    "@leeoniya/ufuzzy": "1.0.14",
     "agenda": "^5.0.0",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.7",
-    "fuse.js": "^6.6.2",
-    "mongoose": "^7.2.1"
+    "axios": "^1.7.2",
+    "discord-bot-parent": "workspace:^7.0.0",
+    "fuse.js": "^7.0.0",
+    "mongoose": "^8.4.1"
   }
 }
